syntax = "proto3";

package translate;

option go_package = "github.com/yb2020/odoc-proto/gen/go/translate";

import "definitions/translate/TranslateEnum.proto";
import "definitions/validate/Validate.proto";


// @api_path: /text/translate
// @method: POST
// @content-type: application/json
// @summary: 文本翻译
message TextTranslateRequest {
  translate.TranslateChannel channel = 1[(validate.rules).enum = {
    defined_only: true,
    not_in: [0]
  }];
  string text = 2[(validate.rules).string = {
    min_len: 1
  }];
  optional translate.TranslateLanguage sourceLanguage = 3;
  optional translate.TranslateLanguage targetLanguage = 4;
  optional string pdfId = 5;
  optional bool useGlossary = 6;
}

// @api_path: /text/getTranslateTabs
// @method: GET
// @summary: 获取翻译标签
message GetTranslateTabsRequest {
}

message GetTranslateTabsResponse {
  repeated string tabs = 1;
}

// @api_path: /text/translate/completions
// @method: POST
// @content-type: application/json
// @summary: 文本翻译
message AiTranslateRequest {
  // content
  string text=1[(validate.rules).string = {min_len: 1}];
  optional translate.TranslateLanguage sourceLanguage = 2;
  optional translate.TranslateLanguage targetLanguage = 3;
  // pdfId
  optional string pdfId=4;
  //是否使用术语库
  optional bool useGlossary= 5;
}


message TranslateResponse {  
  // 目标翻译
  repeated string targetContent=1;
  // requestId
  optional string requestId=2;
  //英式音标
  optional string britishSymbol = 3;
  //美式音标
  optional string americaSymbol = 4;
  //文件格式
  optional string britishFormat = 5;
  //英式发音
  optional string britishPronunciation = 6;
  //文件格式
  optional string americaFormat = 7;
  //美式发音
  optional string americaPronunciation = 8;

  repeated TargetResp targetResp = 9;

  //ocr识别出来的文本
  optional string ocrExtractText = 10;

  //术语
  repeated GlossaryInfo glossaryList = 11;

  //流式输出数据
  optional string sseData = 12;
}

message GlossaryInfo {
  // 原文
  string originalText=1;
  // 译文
  string translationText=2;

  uint32 start = 3;
  uint32 end = 4;
}

message TargetResp {
  //词性
  string part = 1;
  //译文
  repeated string targetContent = 2;
}


// @api_path: /text/translate/correct
// @method: POST
// @content-type: application/json
// @summary: 翻译纠错
 message TranslateCorrectInfoReq {  
  // requestId
  string requestId=1 [(validate.rules).string = {min_len: 1}];
  // youdao/tencent/google/baidu/deepl/idea 对齐数据上报
  translate.TranslateChannel channel=2 [(validate.rules).enum = {defined_only: true, not_in: [0]}];
}


// @api_path: /services/text/translate/internal
// @method: POST
// @content-type: application/json
// @summary: 内部翻译接口入参，全文翻译按块翻译【需要使用服务token才能访问】
 message FullTextBlockTranslateReq {  
  // content
  string content=1 [(validate.rules).string = {min_len: 1}];
  optional translate.TranslateLanguage sourceLanguage = 2;
  optional translate.TranslateLanguage targetLanguage = 3;
  // pdfId
  optional string pdfId=4;
  // paperId
  optional string paperId=5;
  // pageId
  optional string pageId=6;
  // blockId
  optional string blockId=7;

}
  
message FullTextBlockTranslateResp { 
  //翻译引擎
  string engine=1;
  //翻译内容
  string content=2;
  //是否缓存
  bool cached=3;
}

// 全文翻译工作流状态
enum FullTranslateWorkflowStatus {
  // 翻译中
  FULL_TRANSLATING = 0;
  // 翻译完成
  FULL_TRANSLATE_FINISHED = 1;
  // 翻译失败
  FULL_TRANSLATE_FAIL = 2;
  // 无翻译记录
  FULL_TRANSLATE_WITHOUT_HISTORY = 3;
}